--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ ul
     list-style: none;
     padding: 0 0;
     border: none;
+    margin: 0 0;
 }
 
 .conteiner {
@@ -49,72 +50,14 @@ img {
   display: block;
 }
  
-ul { margin: 0 0; }
+
 h1,h2,h3,h4,h5,h6,p { margin: 0 0; }
 /* -------------------Header------------------ */
-.contact-list__link {
-display: flex;
-justify-content: center;
-align-items: center;
-  
-}
-
-.contact-list__icon {
-    
-margin-right: 10px;
-    
-}
-.nav-list__link--current {
-    position: relative;
-}
-.nav-list__link--current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
-}
-
- .header {
-    padding-top: 0;
-    padding-bottom: 0;
-    
-    border: 1px solid #ECECEC;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-   
-
- }
-.header__conteiner {
-align-items: center;
-padding-top: 0;
-height: 80px;
-}
 
 
-.nav-list,
-.contact-list {
-display: flex;
-margin-top: 0;
-margin-bottom: 0;
-align-items: center;
 
-}
+ 
 
-.contact-list {
-margin-left: auto;
-}
-
-.nav-list>li:not(:last-child) {
-margin-right: 50px;
-}
-.contact-list>li:not(:last-child) {
-margin-right: 50px;
-}
 
 .header__logo {
 margin-left: 0;
@@ -135,50 +78,7 @@ color: var(--accent-color);
 color: var(--second-logo-color);
 }
 
-.nav-list__link,
-.contact-list__link {
-display: flex;
-padding-top: 32px;
-padding-bottom: 32px;
 
-text-decoration: none;
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-
-transition-property: color;
-transition-duration: var(--effect-time);
-transition-timing-function: var(--effect-function);
-transition-delay: var(--effect-time);
-    
-color: var(--main-text-color);
-fill: var(--second-text-color);
-}
-
-.contact-list__icon {
-
-    transition-property: fill;
-    transition-duration: var(--effect-time);
-    transition-timing-function: var(--effect-function);
-    transition-delay: var(--effect-time);
-}
-
-
-
-
-.contact-list__link {
-color: var(--second-text-color);}
-
-.nav-list__link:hover,
-.contact-list__link:hover,
-.nav-list__link:focus,
-.contact-list__link:focus,
-.nav-list__link--current
-{ 
-color: var(--accent-color);
-fill: var(--accent-color);
-}
 
 /* -------------------Hero------------------ */
 
