--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,7 +10,7 @@
 }
 
 .header__conteiner {
-    @extend %conteiner;
+    // @extend %conteiner;
     align-items: center;
     padding-top: 0;
     height: 80px;
