--- a/sass/components/_nav-list.scss
+++ b/sass/components/_nav-list.scss
@@ -40,7 +40,7 @@ letter-spacing: 0.02em;
 
 transition-property: color;
 transition-duration: $effect-time;
-transition-timing-function: $ffect-function;
+transition-timing-function: $effect-function;
 transition-delay: $effect-time;
 
 color: $main-text-color;
