--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,11 @@
 
 @import "./components/logo";
 
+@import "./components/hero";
 
+@import "./components/benefits";
+
+@import "./components/which-do.scss";
 
 
 
