Доробив до здачі дз

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,10 +16,15 @@
 
 @import "./components/benefits";
 
-@import "./components/which-do.scss";
+@import "./components/which-do";
 
+@import "./components/our-command";
 
+@import "./components/clients";
 
+@import "./components/footer";
+
+@import "./components/portfolio";
 
 
 
