--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,9 +1,9 @@
 body {
-    font-family: "Roboto", "sans-serif";
+    font-family: $main-font;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    background: var(--main-background-color);
-    color: var(--second-text-color);
+    background: $main-background-color;
+    color: $second-text-color;
 }
