--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,7 +5,7 @@
 
 .logo {
     text-decoration: none;
-    font-family: 'Raleway', "sans-serif";
+    font-family: $logo-font;
 
     font-weight: 700;
     font-size: 26px;
