--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,3 +11,6 @@
  $main-icon-color: #AFB1B8;
  $effect-time: 250ms;
  $effect-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+ $logo-font:"Raleway","sans-serif";
+ $main-font: "Roboto", "sans-serif";
